Fixed mobile white space bug

--- a/app/assets/styles/app.scss
+++ b/app/assets/styles/app.scss
@@ -13,7 +13,7 @@ $red: #FF684C;
 // General nav
 
 .ui.navigation.grid {
-    margin-bottom: 50px;
+    margin: 0px 0px 50px 0px;
 }
 
 .body.container {
@@ -150,7 +150,7 @@ footer {
 	text-align: right;
 	padding: 1em;
 	margin-top: 5%;
-	background-color: $dark-teal;
+	background-color: $teal;
 }
 
 #h4i_logo {
